# torchsmith

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
.github/: run-tests.yaml
.github/workflows/: run-tests.yaml
examples/: train_2d_diffusion.py  train_AM.py  train_colored_mnist_images.py  train_colored_mnist_vae.py  train_colored_mnist_with_text.py  train_diffusion_cifar_UNet.py  train_eminem.py  train_flow_matching_2d.py  train_latent_diffusion_cifar_DiT.py  train_poetry.py  train_recipes.py  train_score_matching_2d.py  train_vae_svhn.py  train_vqvae_with_transformer_prior.py
examples/flows/: train_flow_matching_2d.py  train_flow_matching_arbitrary_distributions.py  train_score_matching_2d.py
scripts/: generate_badges.sh
src/torchsmith/datahub/: arctic_monkeys.py  colored_mnist.py  eminem.py  hugging_face.py  images.py  images_with_vae.py  images_with_vqvae.py  poetry.py  recipes.py  svhn.py  text_dataset.py  utils.py
src/torchsmith/models/: base.py
src/torchsmith/tokenizers/: __init__.py  base_tokenizer.py  byte_pair_encoding_tokenizer.py  character_tokenizer.py  mnist_tokenizer.py  (+3 more)
tests/datasets/: test_dataset_utils.py  test_datasets.py
tests/models/: test_diffusion.py  test_gpt2.py  test_vae.py  test_vae_utils.py  test_vq_vae.py  test_vqvae_gpt2.py
tests/tokenizers/: test_tokenizers.py
tests/training/: test_trainer_autoregression.py  test_trainer_diffusion.py  test_trainer_vae.py  test_trainer_vqvae_autoregression.py
tests/utils/: test_plotting.py  test_pytorch.py  test_pyutils.py
(+68 files in other folders)
